syntax = "proto3";

package sayname;
option go_package = "/saynamepb";

service SayNameService {
    rpc sayName (SayNameRequest) returns (SayNameResponse);
}

message SayNameRequest {
    string name = 1;
}

message SayNameResponse {
    string gotName = 1;
}